# MCL-Strawberry-Harvesting-Manipulator

./: README.md
MCU_Controller/: .cproject  .mxproject  .project  MCU_Controller.ioc  MCU_Controller.launch
MCU_Controller/Core/Inc/: FreeRTOSConfig.h  stm32h7xx_it.h
MCU_Controller/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
MCU_Controller/Debug/: MCU_Controller.elf  MCU_Controller.list  MCU_Controller.map  makefile  objects.list
MCU_Controller/Debug/Core/Src/: freertos.d  main.cyclo  main.d  main.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.d  stm32h7xx_hal_msp.su  stm32h7xx_hal_timebase_tim.d  stm32h7xx_it.cyclo  stm32h7xx_it.d  stm32h7xx_it.su  subdir.mk  system_stm32h7xx.d
MCU_Controller/Debug/Core/Startup/: subdir.mk
MCU_Controller/Debug/Drivers/BSP/STM32H7xx_Nucleo/: stm32h7xx_nucleo.d  subdir.mk
MCU_Controller/Debug/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.d  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_exti.d  stm32h7xx_hal_fdcan.d  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_gpio.d  stm32h7xx_hal_hsem.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_mdma.d  stm32h7xx_hal_pwr.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_rcc.d  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_tim.d  stm32h7xx_hal_tim_ex.d  stm32h7xx_hal_uart.d  stm32h7xx_hal_uart_ex.d  stm32h7xx_hal_usart.d  stm32h7xx_hal_usart_ex.d  subdir.mk
PC_UI/: CMakeLists.txt  globalVariables.cpp  globalVariables.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialreceiver.cpp  serialreceiver.h
